# routes/api.php
@@ -22,12 +22,12 @@ Route::middleware('scope.user')->group(function () {
     Route::get('/protected', function () {
         return response()->json(['message' => 'Access granted']);
     });
-    Route::get('daily-volumes/{perPage?}', [DailyVolumeController::class, 'index']);
+    Route::post('daily-volumes/{perPage?}', [DailyVolumeController::class, 'index']);
     Route::get('daily-volumes/view/{id}', [DailyVolumeController::class, 'show']);
     Route::delete('daily-volumes/{id}', [DailyVolumeController::class, 'destroy']);
-    Route::get('gas-costs', [GasCostController::class, 'index']);
-    Route::get('gas-costs/{id}', [GasCostController::class, 'show']);
-    Route::delete('gas-costs/{id}', [GasCostController::class, 'destroy']);
+    Route::post('gas-costs', [GasCostController::class, 'index']);
+    Route::get('gas-costs/view/{id}', [GasCostController::class, 'show']);
+    Route::delete('gas-costs/delete/{id}', [GasCostController::class, 'destroy']);
 });
 
 
